--- a/views/index.pug
+++ b/views/index.pug
@@ -24,46 +24,47 @@ block content
 					.col-md-3.no-padding
 						.content
 							.inner
-								.system-icon
-								span WEBAPPLIKASJONER
+								.design-icon
+								span DESIGN
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 					.col-md-3.no-padding
 						.content
 							.inner
-								.responsive-icon
-								span SEO
+								.system-icon
+								span WEBAPPLIKASJONER
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+					
 				.row
 					.col-md-3.no-padding
 						.content
 							.inner
-								.phone-icon
-								span APPUTVIKLING
+								.search-icon
+								span SEO
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 					.col-md-3.no-padding
 						.content
 							.inner
-								.mac-icon
-								span WEBUTVIKLING
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
-					.col-md-3.no-padding
-						.content
-							.inner
-								.system-icon
-								span WEBAPPLIKASJONER
+								.lightbulb-icon
+								span MODERNE LØSNINGER
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 					.col-md-3.no-padding
 						.content
 							.inner
 								.responsive-icon
-								span SEO
+								span RESPONSIVT DESIGN
+							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+					.col-md-3.no-padding
+						.content
+							.inner
+								.tool-icon
+								span VEDLIKEHOLD
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 	#hero2.intersection
 		.overlay
 			.text
-				span VI SETTER <span style="color: #ffa64d;">IDÈER</span> UT I LIVE.
+				span VI SETTER <span style="color: #ffa64d;">IDÈER</span> UT I LIVET.
 
 	section#grunder
 		.container-fluid
@@ -74,21 +75,21 @@ block content
 				.col-md-4.no-padding
 					.content
 						.inner
-							.phone-icon
+							.code-icon
 							span PROTOTYPE
 						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 				.col-md-4.no-padding
 					.content
 						.inner
-							.mac-icon
+							.price-icon
 							span LAV KOSTNAD
 						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 				.col-md-4.no-padding
 					.content
 						.inner
-							.system-icon
-							span WEBAPPLIKASJONER
+							.clock-icon
+							span LEVERINGSTID
 						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 	#hero3.intersection
