--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3653,7 +3653,7 @@ tbody.collapse.in {
 
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 70px;
   margin-bottom: 20px;
   border: 1px solid transparent; }
   .navbar:before, .navbar:after {
@@ -3759,10 +3759,10 @@ tbody.collapse.in {
 
 .navbar-brand {
   float: left;
-  padding: 15px 15px;
+  padding: 25px 15px;
   font-size: 18px;
   line-height: 20px;
-  height: 50px; }
+  height: 70px; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
   .navbar-brand > img {
@@ -3777,8 +3777,8 @@ tbody.collapse.in {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 18px;
+  margin-bottom: 18px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -3797,7 +3797,7 @@ tbody.collapse.in {
       display: none; } }
 
 .navbar-nav {
-  margin: 7.5px -15px; }
+  margin: 12.5px -15px; }
   .navbar-nav > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -3825,8 +3825,8 @@ tbody.collapse.in {
       .navbar-nav > li {
         float: left; }
         .navbar-nav > li > a {
-          padding-top: 15px;
-          padding-bottom: 15px; } }
+          padding-top: 25px;
+          padding-bottom: 25px; } }
 
 .navbar-form {
   margin-left: -15px;
@@ -3836,8 +3836,8 @@ tbody.collapse.in {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 8px;
-  margin-bottom: 8px; }
+  margin-top: 18px;
+  margin-bottom: 18px; }
   @media (min-width: 768px) {
     .navbar-form .form-group {
       display: inline-block;
@@ -3905,18 +3905,18 @@ tbody.collapse.in {
   border-bottom-left-radius: 0; }
 
 .navbar-btn {
-  margin-top: 8px;
-  margin-bottom: 8px; }
+  margin-top: 18px;
+  margin-bottom: 18px; }
   .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-    margin-top: 10px;
-    margin-bottom: 10px; }
+    margin-top: 20px;
+    margin-bottom: 20px; }
   .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
-    margin-top: 14px;
-    margin-bottom: 14px; }
+    margin-top: 24px;
+    margin-bottom: 24px; }
 
 .navbar-text {
-  margin-top: 15px;
-  margin-bottom: 15px; }
+  margin-top: 25px;
+  margin-bottom: 25px; }
   @media (min-width: 9000px) {
     .navbar-text {
       float: left;
@@ -5815,8 +5815,7 @@ button.close {
     display: none !important; } }
 
 body {
-  font-family: 'open-sans', sans-serif;
-  height: 5000px; }
+  font-family: 'open-sans', sans-serif; }
   body h2 {
     text-align: center;
     font-size: 2.1em;
@@ -5913,7 +5912,7 @@ body {
     width: 100%; }
 
 #contact {
-  margin: 150px 0; }
+  margin: 200px 0; }
   #contact .form-container {
     width: 70%; }
     #contact .form-container ul {
@@ -5946,6 +5945,25 @@ body {
       font-size: 1.3em;
       border: 2px solid; }
 
+.footer {
+  background-color: #365c7c;
+  text-align: center;
+  color: #fff;
+  padding: 50px 0; }
+  .footer .text {
+    font-size: 1.2em; }
+  .footer ul {
+    padding: 30px 0; }
+    .footer ul li {
+      display: inline;
+      list-style: none;
+      margin: 0 5px; }
+      .footer ul li img {
+        width: 50px;
+        background-color: #fff;
+        border-radius: 100%;
+        padding: 5px; }
+
 .intersection {
   height: 350px;
   text-align: center;
@@ -5970,14 +5988,117 @@ body {
   margin-left: auto;
   margin-right: auto; }
 
-.navbar-default {
-  border: none; }
-  .navbar-default .navbar-toggle {
-    border: none; }
-    .navbar-default .navbar-toggle .icon-bar {
-      background-color: #fff; }
+#navigation .button_container {
+  position: fixed;
+  top: 5%;
+  right: 2%;
+  height: 27px;
+  width: 35px;
+  cursor: pointer;
+  z-index: 1010;
+  transition: opacity .25s ease; }
+  #navigation .button_container:hover {
+    opacity: .7; }
+  #navigation .button_container.active .top {
+    transform: translateY(11px) translateX(0) rotate(45deg);
+    background: #FFF; }
+  #navigation .button_container.active .middle {
+    opacity: 0;
+    background: #FFF; }
+  #navigation .button_container.active .bottom {
+    transform: translateY(-11px) translateX(0) rotate(-45deg);
+    background: #FFF; }
+  #navigation .button_container span {
+    background: #ffa64d;
+    border: none;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .35s ease;
+    cursor: pointer; }
+    #navigation .button_container span:nth-of-type(2) {
+      top: 11px; }
+    #navigation .button_container span:nth-of-type(3) {
+      top: 22px; }
 
-.icons .content .inner .phone-icon, .icons .content .inner .mac-icon, .icons .content .inner .system-icon, .icons .content .inner .responsive-icon {
+#navigation .nav-overlay {
+  position: fixed;
+  background: #51708b;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .35s, visibility .35s, height .35s;
+  overflow: hidden;
+  z-index: 1000; }
+  #navigation .nav-overlay.open {
+    opacity: .9;
+    visibility: visible;
+    height: 100%; }
+    #navigation .nav-overlay.open li {
+      animation: fadeInRight .5s ease forwards;
+      animation-delay: .35s; }
+      #navigation .nav-overlay.open li:nth-of-type(2) {
+        animation-delay: .4s; }
+      #navigation .nav-overlay.open li:nth-of-type(3) {
+        animation-delay: .45s; }
+      #navigation .nav-overlay.open li:nth-of-type(4) {
+        animation-delay: .50s; }
+  #navigation .nav-overlay nav {
+    position: relative;
+    height: 70%;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 50px;
+    font-weight: 400;
+    text-align: center; }
+  #navigation .nav-overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    position: relative;
+    height: 100%; }
+    #navigation .nav-overlay ul li {
+      display: block;
+      height: 25%;
+      height: calc(100% / 4);
+      min-height: 50px;
+      position: relative;
+      opacity: 0; }
+      #navigation .nav-overlay ul li a {
+        display: block;
+        position: relative;
+        color: #FFF;
+        text-decoration: none;
+        overflow: hidden; }
+        #navigation .nav-overlay ul li a:hover:after, #navigation .nav-overlay ul li a:focus:after, #navigation .nav-overlay ul li a:active:after {
+          width: 100%; }
+        #navigation .nav-overlay ul li a:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          width: 0%;
+          transform: translateX(-50%);
+          height: 3px;
+          background: #FFF;
+          transition: .35s; }
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%; }
+  100% {
+    opacity: 1;
+    left: 0; } }
+
+.icons .content .inner .phone-icon, .icons .content .inner .mac-icon, .icons .content .inner .system-icon, .icons .content .inner .responsive-icon, .icons .content .inner .search-icon,
+.icons .content .inner .lightbulb-icon, .icons .content .inner .design-icon, .icons .content .inner .tool-icon, .icons .content .inner .code-icon, .icons .content .inner .price-icon, .icons .content .inner .clock-icon {
   display: block;
   margin: 0 auto;
   height: 125px;
@@ -5988,31 +6109,73 @@ body {
   transition: transform 0.4s; }
 
 .icons .content .inner .phone-icon {
-  background: url("../icons/phone.png");
+  background: url("../icons/phone-optimized.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat; }
 
 .icons .content .inner .mac-icon {
-  background: url("../icons/mac.png");
+  background: url("../icons/mac-optimized.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat; }
 
 .icons .content .inner .system-icon {
-  background: url("../icons/system.png");
+  background: url("../icons/system.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat; }
 
 .icons .content .inner .responsive-icon {
-  background: url("../icons/responsive.png");
+  background: url("../icons/responsive-optimized.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .search-icon {
+  background: url("../icons/seo.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .lightbulb-icon {
+  background: url("../icons/lightbulb.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .design-icon {
+  background: url("../icons/pencil.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .tool-icon {
+  background: url("../icons/tool.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .code-icon {
+  background: url("../icons/prototype.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .price-icon {
+  background: url("../icons/price.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+.icons .content .inner .clock-icon {
+  background: url("../icons/clock.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat; }
 
 .icons .content:hover .phone-icon {
-  background: url("../icons/phone-white.png");
+  background: url("../icons/phone-white-optimized.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat;
@@ -6023,7 +6186,7 @@ body {
   transform: translateY(-40px); }
 
 .icons .content:hover .mac-icon {
-  background: url("../icons/mac-white.png");
+  background: url("../icons/mac-white-optimized.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat;
@@ -6034,7 +6197,7 @@ body {
   transform: translateY(-40px); }
 
 .icons .content:hover .system-icon {
-  background: url("../icons/system-white.png");
+  background: url("../icons/system-white.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat;
@@ -6045,7 +6208,84 @@ body {
   transform: translateY(-40px); }
 
 .icons .content:hover .responsive-icon {
-  background: url("../icons/responsive-white.png");
+  background: url("../icons/responsive-white-optimized.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .search-icon {
+  background: url("../icons/seo-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .lightbulb-icon {
+  background: url("../icons/lightbulb-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .design-icon {
+  background: url("../icons/pencil-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .tool-icon {
+  background: url("../icons/tool-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .code-icon {
+  background: url("../icons/prototype-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .price-icon {
+  background: url("../icons/price-white.svg");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
+  -moz-transform: translateY(-40px);
+  -o-transform: translateY(-40px);
+  transform: translateY(-40px); }
+
+.icons .content:hover .clock-icon {
+  background: url("../icons/clock-white.svg");
   background-position: center center;
   background-size: auto 125px;
   background-repeat: no-repeat;
@@ -6066,13 +6306,15 @@ body {
     top: 35%;
     left: 25%; }
   #hero1 .overlay {
-    background-color: rgba(54, 92, 124, 0.8); }
+    background-color: rgba(54, 92, 124, 0.9); }
 
 #hero2 {
   background: url("../images/light.jpeg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed; }
+  #hero2 .overlay {
+    background-color: rgba(51, 153, 255, 0.4); }
 
 #hero3 {
   background-size: cover;
