--- a/src/sass/partials/_custom.scss
+++ b/src/sass/partials/_custom.scss
@@ -1,6 +1,5 @@
 body {
     font-family: 'open-sans', sans-serif;
-    height: 5000px;
 
     h2 {
         text-align: center;
@@ -99,7 +98,7 @@ body {
 }
 
 #contact {
-    margin: 150px 0;
+    margin: 200px 0;
     .form-container {
         width: 70%;
 
@@ -141,6 +140,37 @@ body {
             border: 2px solid;
         }
     }
+}
+
+.footer {
+    background-color: $main-blue;
+    text-align: center;
+    color: #fff;
+    padding: 50px 0;
+
+    .text {
+        font-size: 1.2em;
+    }
+
+
+    ul {
+        padding: 30px 0;
+        li {
+            display: inline;
+            list-style: none;
+            margin: 0 5px;
+
+            img {
+                width: 50px;
+                background-color: #fff;
+                border-radius: 100%;
+                padding: 5px;
+            }
+        }
+    }
+
+    
+    
 }
 
 .intersection {
