--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -6,5 +6,7 @@ html
 		include ./navbar.pug
 		
 		block content
+
+		include ./footer.pug
 	
-	include ../includes/scripts.pug
+		include ../includes/scripts.pug
