--- a/views/index.pug
+++ b/views/index.pug
@@ -13,20 +13,20 @@ block content
 							.inner
 								.phone-icon
 								span APPUTVIKLING
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle Vi utvikler våre mobile løsninger med hybridteknologi som gjør at din app blir tilgjengelig på flere plattformer.
 
 					.col-md-3.no-padding
 						.content
 							.inner
 								.mac-icon
 								span WEBUTVIKLING
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle En webside er idag et av de viktigste... Vi hjelpe deg med å lage en god og informativ webside til din bedrift.
 					.col-md-3.no-padding
 						.content
 							.inner
 								.design-icon
 								span DESIGN
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image. that leave an impression
 					.col-md-3.no-padding
 						.content
 							.inner
@@ -47,7 +47,7 @@ block content
 							.inner
 								.lightbulb-icon
 								span MODERNE LØSNINGER
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle Vi benytter oss alltid av de siste og nyeste teknologiene, for å forsikre oss om at det vi leverer alltid er oppdatert.
 					.col-md-3.no-padding
 						.content
 							.inner
@@ -58,7 +58,7 @@ block content
 						.content
 							.inner
 								.tool-icon
-								span VEDLIKEHOLD
+								span KVALITET
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 	#hero2.intersection
@@ -76,26 +76,26 @@ block content
 					.content
 						.inner
 							.code-icon
-							span PROTOTYPE
-						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span MVP
+						span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
 
 				.col-md-4.no-padding
 					.content
 						.inner
 							.price-icon
-							span LAV KOSTNAD
-						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span GRÜNDERVENNLIG PRIS
+						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i produktet.
 				.col-md-4.no-padding
 					.content
 						.inner
 							.clock-icon
 							span LEVERINGSTID
-						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+						span.toggle En av de store fordelene med å lage MVP er 
 
 	#hero3.intersection
 		.overlay
 			.text
-				span Vårt første <span style="color: #ffa64d;">prioritering</span> er å levere et produkt som kunden er <span style="color: #ffa64d;">100% tilfreds</span> med.
+				span Å levere et produkt som kunden er <span style="color: #ffa64d;">100% tilfreds</span> med er vår første <span style="color: #ffa64d;">prioritering</span>.
 					
 	section#about-us
 		.container
@@ -126,12 +126,12 @@ block content
 		.container
 			h2 JOBBE MED OSS?
 			.form-container.center-block
-				form()
+				form(action="https://formspree.io/rina.andriana@outlook.com" method="POST")
 					ul
 						li: input(type="text" name="name" placeholder="Navn" required)
-						li: input(type="email" name="email" placeholder="Epost" required)
+						li: input(type="email" name="_replyto" placeholder="Epost" required)
 						li: input(type="number" name="mobile" placeholder="Mobil")
-						li: input(type="text" name="subject" placeholder="Emne" required)
+						li: input(type="text" name="_subject" placeholder="Emne" required)
 					textarea(rows="5" name="message" placeholder="Melding" required)
 					input#submitbutton(type="submit" value="SEND")
 
