--- a/views/index.pug
+++ b/views/index.pug
@@ -9,26 +9,26 @@ block content
 			.container-fluid
 				.row
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.phone-icon
 								span APPUTVIKLING
 							span.toggle Vi utvikler våre mobile løsninger med hybridteknologi som gjør at din app blir tilgjengelig på flere plattformer.
 
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.mac-icon
 								span WEBUTVIKLING
 							span.toggle En webside er idag et av de viktigste... Vi hjelpe deg med å lage en god og informativ webside til din bedrift.
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.design-icon
 								span DESIGN
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image. that leave an impression
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.system-icon
 								span WEBAPPLIKASJONER
@@ -36,26 +36,26 @@ block content
 					
 				.row
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.search-icon
 								span SEO
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.lightbulb-icon
 								span MODERNE LØSNINGER
 							span.toggle Vi benytter oss alltid av de siste og nyeste teknologiene, for å forsikre oss om at det vi leverer alltid er oppdatert.
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.responsive-icon
 								span RESPONSIVT DESIGN
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 					.col-md-3.no-padding
-						.content
+						.content.toggle-info
 							.inner
 								.tool-icon
 								span KVALITET
@@ -73,20 +73,20 @@ block content
 				p.text-content Har du en <span style="color: #ffa64d;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
 			.icons.row
 				.col-md-4.no-padding
-					.content
+					.content.toggle-info
 						.inner
 							.code-icon
 							span MVP
 						span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
 
 				.col-md-4.no-padding
-					.content
+					.content.toggle-info
 						.inner
 							.price-icon
 							span GRÜNDERVENNLIG PRIS
 						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i produktet.
 				.col-md-4.no-padding
-					.content
+					.content.toggle-info
 						.inner
 							.clock-icon
 							span LEVERINGSTID
@@ -105,13 +105,11 @@ block content
 						h2.text-header HVEM ER <span style="color: #ffa64d;">VI</span>
 					.col-md-10
 						p.text-content Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at urna aliquam, varius blandit massa molestie. 
-							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non, 
-							| tempor a metus. Sed pharetra erat sed finibus euismod. Morbi et diam libero. Ut non pharetra tortor. 
-							| Nullam scelerisque ante ac augue finibus suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
 	
 	section#projects
 		h2 HVA VI HAR <span style="color: #ffa64d;">JOBBET</span> MED
-		.container.push-down-100
+		.container
 			.row
 				.col-md-6
 					.center-block
