--- a/src/sass/partials/_background.scss
+++ b/src/sass/partials/_background.scss
@@ -1,12 +1,16 @@
 #hero1 {
-    background: url("../images/raintech-header-2.jpeg");
+    /* deactivate on mobile devices
+    background: url("../images/raintech-header-2.jpeg");*/
     @include background-props;
-    height: 100vh;
+    height: 80vh;
 
     img {
         position: absolute;
+        width: 90%;
         top: 35%;
-        left: 25%;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 
     .overlay {
@@ -16,11 +20,12 @@
 }
 
 #hero2 {
-    background: url("../images/light.jpeg");
+    /* deactivate on mobile devices
+    background: url("../images/light.jpeg"); */
     @include background-props;
 
-    .overlay {
-        background-color: rgba(51, 153, 255, 0.4);
+    .text {
+        padding: 0 20px;
     }
 }
 
@@ -31,9 +36,10 @@
         background-color: rgb(54, 92, 124);
 
         .text {
-            padding: 0 100px;
-            font-size: 2.3em;
+            padding: 0 10px;
+            font-size: 1.6em;
             font-weight: 100;
+            top: 25%;
         }
     }
 }
@@ -45,13 +51,13 @@
 
 .overlay {
     height: 100%;
-    background-color: rgba(51, 153, 255, 0.4);
+    background-color: rgba(54, 92, 124,0.9);
     position: relative;
 
     .text {
         position: absolute;
-        top:40%; 
+        top:35%; 
         width:100%;
-        font-size: 4em;
+        font-size: 2em;
     }
 }
