--- a/src/sass/partials/_default.scss
+++ b/src/sass/partials/_default.scss
@@ -16,6 +16,8 @@ body {
 }
 
 .icons {
+    background-color: #ffa64d;
+    padding-top: 25px;
     .content {
         height: 320px;
         position: relative;
