--- a/src/sass/partials/_navbar.scss
+++ b/src/sass/partials/_navbar.scss
@@ -38,7 +38,7 @@
     }
     
     span {
-    background: $primary-color;
+    background: #404040;
     border: none;
     height: 5px;
     width: 100%;
