--- a/views/index.pug
+++ b/views/index.pug
@@ -40,7 +40,7 @@ block content
 							.inner
 								.search-icon
 								span SEO
-							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+							span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
 
 					.col-md-3.no-padding
 						.content.toggle-info
