--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,7 +1,8 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "./partials/mixins";
 @import "./partials/variables";
-@import "./partials/custom";
+@import "./partials/default";
+@import "./partials/responsive-sm-min";
 @import "./partials/navbar";
 @import "./partials/icons";
 @import "./partials/background";
