--- a/src/sass/partials/_background.scss
+++ b/src/sass/partials/_background.scss
@@ -1,13 +1,13 @@
 #hero1 {
-    /* deactivate on mobile devices
-    background: url("../images/raintech-header-2.jpeg");*/
+    /* deactivate on mobile devices*/
+    //background: url("../images/raintech-header-2.jpeg");
     @include background-props;
-    height: 100vh;
+    height: 90vh;
 
     img {
         position: absolute;
         width: 90%;
-        top: 40%;
+        top: 35%;
         left: 0;
         right: 0;
         margin: auto;
@@ -59,5 +59,27 @@
         top:35%; 
         width:100%;
         font-size: 2em;
+    }
+}
+
+@media (min-width: $screen-sm-min) {
+    #hero1 {
+        img {
+            width: 75%;
+        }
+    }
+
+    #hero2 {
+        .text {
+            font-size: 2.6em;
+        }
+    }
+
+    #hero3 {
+        height: 190px;
+        .overlay .text {
+            font-size: 2em;
+            padding: 0 50px;
+        }
     }
 }
