--- a/src/sass/partials/_default.scss
+++ b/src/sass/partials/_default.scss
@@ -80,7 +80,7 @@ body {
     p {
         text-align: center;
         margin: 20px 0 30px 0;
-        font-size: 6vw;
+        font-size: 1.3em;
         font-weight: 300;
     }
 }
@@ -92,6 +92,7 @@ body {
     .image-container {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-bottom: 30px;
+        max-width: 555px;
 
         img {
             width: 100%;
@@ -185,7 +186,7 @@ body {
 
     .text-content {
         font-size: 1.3em;
-        text-align: center;
+        text-align: left;
     }
 }
 
