--- a/views/index.pug
+++ b/views/index.pug
@@ -8,26 +8,26 @@ block content
 		.icons
 			.container-fluid
 				.row
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.phone-icon
 								span APPUTVIKLING
 							span.toggle Vi utvikler våre mobile løsninger med hybridteknologi som gjør at din app blir tilgjengelig på flere plattformer.
 
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.mac-icon
 								span WEBUTVIKLING
 							span.toggle En webside er idag et av de viktigste... Vi hjelpe deg med å lage en god og informativ webside til din bedrift.
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.design-icon
 								span DESIGN
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image. that leave an impression
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.system-icon
@@ -35,26 +35,26 @@ block content
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 					
 				.row
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.search-icon
 								span SEO
 							span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
 
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.lightbulb-icon
 								span MODERNE LØSNINGER
 							span.toggle Vi benytter oss alltid av de siste og nyeste teknologiene, for å forsikre oss om at det vi leverer alltid er oppdatert.
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.responsive-icon
 								span RESPONSIVT DESIGN
 							span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
-					.col-md-3.no-padding
+					.col-md-3.col-sm-6.no-padding
 						.content.toggle-info
 							.inner
 								.tool-icon
@@ -72,20 +72,20 @@ block content
 				h2.text-header ER DU EN <span style="color: #ffa64d;">GRÜNDER</span>?
 				p.text-content Har du en <span style="color: #ffa64d;">forretnindsidée</span> som du har lyst til å relalisere? Vi hjelper deg!
 			.icons.row
-				.col-md-4.no-padding
+				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
 						.inner
 							.code-icon
 							span MVP
 						span.toggle Vi hjelper deg med å lage en MVP/prototype til produktet ditt. Med det kan du teste konseptet i markedet før du går videre med utviklingen.
 
-				.col-md-4.no-padding
+				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
 						.inner
 							.price-icon
 							span GRÜNDERVENNLIG PRIS
 						span.toggle Vi vet at gründere ikke er de med best råd. Vi har derfor en gründervennlig pris som gjør at du kan investere pengene videre i produktet.
-				.col-md-4.no-padding
+				.col-md-4.col-sm-4.no-padding
 					.content.toggle-info
 						.inner
 							.clock-icon
@@ -106,18 +106,20 @@ block content
 					.col-md-10
 						p.text-content Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at urna aliquam, varius blandit massa molestie. 
 							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
+							br
+							br
+							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
+							| Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non.
 	
 	section#projects
 		h2 HVA VI HAR <span style="color: #ffa64d;">JOBBET</span> MED
 		.container
 			.row
 				.col-md-6
-					.center-block
-						.image-container
+					.image-container.center-block
 							img(src="images/hoban.png")
 				.col-md-6
-					.center-block
-						.image-container
+					.image-container.center-block
 							img(src="images/blueways.png")
 
 	section#contact
